tests/integration/errors/while_non_bool.rsg
// TEST: compile_error
// EXPECT-ERROR: condition must be 'bool'

fn main() {
    while 42 {
    }
}
